[gd_scene load_steps=27 format=3 uid="uid://cs6dvuoqlrn4w"]

[ext_resource type="Texture2D" uid="uid://dmfw8ymp2tp4g" path="res://images/background.png" id="1_bgtex"]
[ext_resource type="Script" path="res://map_generator.gd" id="1_m7t5v"]
[ext_resource type="Script" path="res://camera_controller.gd" id="3_camera"]
[ext_resource type="Script" path="res://place_armies.gd" id="5_place"]
[ext_resource type="Script" path="res://click_manager.gd" id="6_click"]
[ext_resource type="Script" path="res://game_manager.gd" id="7_game"]
[ext_resource type="Script" path="res://ui_manager.gd" id="8_ui"]
[ext_resource type="PackedScene" uid="uid://darmyselmodal" path="res://scenes/army_select_modal.tscn" id="9_7d6ox"]
[ext_resource type="PackedScene" uid="uid://cml12by6pyhyc" path="res://scenes/region_tooltip2.tscn" id="9_cgk76"]
[ext_resource type="PackedScene" uid="uid://b5x0rd34s8wqj" path="res://scenes/region_modal.tscn" id="10_lauhs"]
[ext_resource type="PackedScene" uid="uid://h2augxohyp55" path="res://scenes/info_modal.tscn" id="13_35f3x"]
[ext_resource type="Script" path="res://sound_manager.gd" id="14_sound"]
[ext_resource type="PackedScene" uid="uid://btws5g1cdahse" path="res://scenes/region_tooltip.tscn" id="15_d3ude"]
[ext_resource type="PackedScene" uid="uid://ro1oniwb0py8" path="res://scenes/battle_modal.tscn" id="16_dtrwa"]
[ext_resource type="PackedScene" uid="uid://bus48vblq4ked" path="res://scenes/recruitment_modal.tscn" id="18_recru"]
[ext_resource type="PackedScene" path="res://scenes/call_to_arms_modal.tscn" id="19_callarms"]
[ext_resource type="PackedScene" path="res://scenes/transfer_soldiers_modal.tscn" id="20_transfer"]
[ext_resource type="PackedScene" uid="uid://ba4uqx2hhbwjg" path="res://scenes/select_tooltip_modal.tscn" id="22_selecttooltip"]
[ext_resource type="PackedScene" path="res://scenes/message_modal.tscn" id="23_messagemmodal"]
[ext_resource type="PackedScene" path="res://scenes/next_player_modal.tscn" id="24_nextplayermodal"]
[ext_resource type="PackedScene" uid="uid://cwr00tkaux1gm" path="res://scenes/transfer_select_modal.tscn" id="24_xybgh"]
[ext_resource type="PackedScene" uid="uid://bsqu1omiwntnm" path="res://scenes/player_status_modal2.tscn" id="25_8wafx"]
[ext_resource type="Script" path="res://PlayerManagerNode.gd" id="25_player"]
[ext_resource type="PackedScene" uid="uid://bl3nnm77yt7tt" path="res://scenes/general_select_modal.tscn" id="26_shq03"]
[ext_resource type="PackedScene" uid="uid://bregionselmod" path="res://scenes/region_select_modal.tscn" id="26_yt65y"]
[ext_resource type="PackedScene" uid="uid://7iyyajasdhd3" path="res://scenes/turn_modal.tscn" id="27_o7y1n"]

[node name="Main" type="Node2D"]
script = ExtResource("5_place")

[node name="Map" type="Node2D" parent="."]
script = ExtResource("1_m7t5v")

[node name="Regions" type="Node2D" parent="Map"]

[node name="Ocean" type="Node2D" parent="Map"]

[node name="Frame" type="Node2D" parent="Map"]

[node name="Background" type="Sprite2D" parent="."]
visible = false
z_index = -100
position = Vector2(-442, -619)
scale = Vector2(2, 2)
texture = ExtResource("1_bgtex")
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1000, 1000)
limit_left = 0
limit_top = 0
limit_right = 2000
limit_bottom = 2000
script = ExtResource("3_camera")

[node name="ClickManager" type="Node" parent="."]
script = ExtResource("6_click")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("7_game")

[node name="SoundManager" type="Node" parent="."]
script = ExtResource("14_sound")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("25_player")

[node name="UI" type="CanvasLayer" parent="."]

[node name="RegionTooltip2" parent="UI" instance=ExtResource("9_cgk76")]

[node name="ArmySelectModal" parent="UI" instance=ExtResource("9_7d6ox")]

[node name="UIManager" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_ui")

[node name="RegionModal" parent="UI" instance=ExtResource("10_lauhs")]

[node name="InfoModal" parent="UI" instance=ExtResource("13_35f3x")]

[node name="RegionTooltip" parent="UI" instance=ExtResource("15_d3ude")]
visible = false

[node name="BattleModal" parent="UI" instance=ExtResource("16_dtrwa")]
visible = false

[node name="RecruitmentModal" parent="UI" instance=ExtResource("18_recru")]
visible = false

[node name="CallToArmsModal" parent="UI" instance=ExtResource("19_callarms")]
visible = false

[node name="TransferSoldiersModal" parent="UI" instance=ExtResource("20_transfer")]
visible = false

[node name="SelectTooltipModal" parent="UI" instance=ExtResource("22_selecttooltip")]
visible = false

[node name="MessageModal" parent="UI" instance=ExtResource("23_messagemmodal")]
visible = false

[node name="NextPlayerModal" parent="UI" instance=ExtResource("24_nextplayermodal")]
visible = false

[node name="PlayerStatusModal2" parent="UI" instance=ExtResource("25_8wafx")]
visible = false

[node name="TurnModal" parent="UI" instance=ExtResource("27_o7y1n")]
visible = false

[node name="MainSelectModal" parent="UI" instance=ExtResource("26_yt65y")]
unique_name_in_owner = true

[node name="GeneralSelectModal" parent="UI" instance=ExtResource("26_shq03")]

[node name="RegionSelectModal" parent="UI" instance=ExtResource("26_yt65y")]

[node name="TransferSelectModal" parent="UI" instance=ExtResource("24_xybgh")]

[node name="Players" type="Node2D" parent="."]

[node name="Player1" type="Node2D" parent="Players"]

[node name="Player2" type="Node2D" parent="Players"]

[node name="Player3" type="Node2D" parent="Players"]

[node name="Player4" type="Node2D" parent="Players"]

[node name="Player5" type="Node2D" parent="Players"]

[node name="Player6" type="Node2D" parent="Players"]
